package com.torneotenis.torneo_tenis.service.strategy;

public class PuntosRondaFinal implements EstrategiaPuntos {
    @Override
    public int calcularPuntos() {
        return 100;
    }
}