package com.torneotenis.torneo_tenis.service.strategy;

public class PuntosRondaOctavos implements EstrategiaPuntos {
    @Override
    public int calcularPuntos() {
        return 20;
    }
}