package com.torneotenis.torneo_tenis.service.strategy;

public class PuntosRondaSegunda implements EstrategiaPuntos {
    @Override
    public int calcularPuntos() {
        return 10;
    }
}