package com.torneotenis.torneo_tenis.service.strategy;

public class PuntosRondaTercera implements EstrategiaPuntos {
    @Override
    public int calcularPuntos() {
        return 15;
    }
}